bugfix: fixed crashing style if text too long

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,10 +2,12 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  max-width: 500px;
 }
 
 @media screen and (max-width: 620px) {
   .profile__info {
     align-items: center;
+    max-width: 100%;
   }
 }
