--- a/blocks/profile/__profession/profile__profession.css
+++ b/blocks/profile/__profession/profile__profession.css
@@ -3,7 +3,10 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 1.22;
-  max-width: 500px;
+  max-width: 80%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 450px) {
