--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -5,7 +5,7 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  max-width: 100%;
 }
 
 @media screen and (max-width: 620px) {
